fix alert's z-index

--- a/uibase/src/styles/EcoreApp.css
+++ b/uibase/src/styles/EcoreApp.css
@@ -6,7 +6,6 @@ header {
 	width: 100%;
 	left: 0;
 	top: 0;
-	z-index: 10000;
 	margin-bottom: 100px;
 }
 
